# watchagent

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  DECISIONS.md  Dockerfile  HANDOVER.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/agents/: data-layer-reviewer.md  event-detection-reviewer.md
.cursor/rules/: event-record-contract.mdc  poller-resilience.mdc  storage-and-dedup.mdc  structured-logging.mdc  testing-conventions.mdc
.cursor/skills/data-analysis/: SKILL.md
.cursor/skills/data-analysis/scripts/: analyze.py
.cursor/skills/dedup-audit/: SKILL.md
.cursor/skills/dedup-audit/scripts/: audit.py
.cursor/skills/replay-detection/: SKILL.md
.cursor/skills/replay-detection/scripts/: replay.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  db.py  domain.py  logging_config.py  main.py  models.py  poller.py  repository.py  schemas.py  weather_client.py
app/detection/: __init__.py  baselines.py  detector.py  rules.py  wmo.py
docs/screenshots/: README.md
scripts/: generate_demo_data.py
tests/: conftest.py  test_api.py  test_dedup.py  test_detection.py  test_weather_client.py
